Updates after QA

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Beers",
-  "name": "Good Beers",
+  "short_name": "Beer",
+  "name": "Good Beer",
   "icons": [
     {
       "src": "favicon.ico",
