--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-scripts-ts": "2.14.0"
   },
   "scripts": {
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
-    "@types/node": "^9.6.2",
-    "@types/react": "^16.0.25",
-    "@types/react-dom": "^16.0.3"
+    "@types/node": "^9.6.3",
+    "@types/react": "^16.3.7",
+    "@types/react-dom": "^16.0.5",
+    "typescript": "^2.8.1"
   }
 }
