--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@okta/okta-react": "1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "4.2.2",
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
@@ -18,6 +20,7 @@
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "@types/react-router-dom": "4.2.2",
     "typescript": "^2.9.2"
   }
 }
